[metadata]
name = attr: jmapy.__name__
version = attr: jmapy.__version__
url = https://github.com/AttoCat/jmapy
author = attr: jmapy.__author__
license = attr: jmapy.__license__
license_file = LICENSE
description = jmapy: JMA-API wrapper.
long_description = file: README.rst

[options]
packages = find:
include_package_data = True
install_requires =
    requests>=2.24.0
    pyhumps>=0.2.2
    dacite>=1.6.0
python_requires = >=3.7.0
