[metadata]
name = jmapy
version = attr: jmapy.__version__
url = https://github.com/AttoCat/jmapy
author = AttoCat
license = MIT
license_file = LICENSE
description = jmapy: JMA-API wrapper.
long_description = file: README.rst

[options]
packages = [jmapy]
include_package_data = True
install_requires =
    requests>=2.24.0
    pyhumps>=0.2.2
    dacite>=1.6.0
python_requires = >=3.7.0
